# python_flask_redis_mysql_demo

./: .gitignore  app.py  config.yaml.template  db_config.py  pyproject.toml  readme.md  requirements.txt
tests/: test_app.py
