[tool.poetry]
name = "python-flask-redis-mysql-demo"
version = "0.1.0"
description = ""
authors = ["Ganesh Chandrasekaran <gchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-restx = "^1.3.0"
pymysql = "^1.1.1"
redis = "^5.0.8"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
